--- a/frontpage.html
+++ b/frontpage.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Farmcrest Foods Control</title>
+    <link rel="icon" type="image/png" href="image/farmcrest.png">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="button-container">
+        <a href="dashboard.html" class="dashboard-button">Orders Dashboard</a>
+        <a href="camera.html" class="camera-button">Camera</a>
+        <a class="reset-button">Reset</a>
+        <a href="overview.html" class="overview-button">Overview</a>
+    </div>
 </body>
+
 </html>
